--- a/.gitattributes
+++ b/.gitattributes
@@ -33,6 +33,8 @@ Classes/WPBlogsListController.h -text
 Classes/WPBlogsListController.m -text
 Classes/WPCategoriesController.h -text
 Classes/WPCategoriesController.m -text
+Classes/WPCommentsDetailViewController.h -text
+Classes/WPCommentsDetailViewController.m -text
 Classes/WPPhotoViewController.h -text
 Classes/WPPhotoViewController.m -text
 Classes/WPPhotosListViewController.h -text
@@ -83,6 +85,7 @@ Classes/XMLRPC/XMLValueDecoder.m -text
 /WPBlogMainViewController.xib -text
 /WPBlogsListController.xib -text
 /WPCategoriesController.xib -text
+/WPCommentsDetailViewController.xib -text
 /WPImageView.h -text
 /WPImageView.m -text
 /WPPhotoViewController.xib -text
