Updated the Application to use the folder image provided by iammattthomas

--- a/.gitattributes
+++ b/.gitattributes
@@ -70,6 +70,7 @@ Classes/XMLRPC/XMLValueDecoder.m -text
 /Disclosure[!!-~]Indicator.png -text
 /DraftsFolder.png -text
 /DraftsList.xib -text
+/Folder.png -text
 /Info.plist -text
 /MainWindow.xib -text
 /PostDetailEditController.xib -text
