--- a/.gitattributes
+++ b/.gitattributes
@@ -112,6 +112,7 @@ WordPress.xcodeproj/project.pbxproj -text
 /delete.png -text
 /down.png -text
 /license.txt -text
+/lock.png -text
 /main.m -text
 /photos.png -text
 /preview.png -text
