Fixed the following issues.
1. Landscape Mode was not properly working for some views.

2. Issue in blog posting asynchronously.

--- a/.gitattributes
+++ b/.gitattributes
@@ -122,9 +122,10 @@ WordPress.xcodeproj/project.pbxproj -text
 /settings.png -text
 /uncheck.png -text
 /up.png -text
+/vertBars.png -text
 /webclip.png -text
 /wplogo.png -text
-/wplogo1.png -text
+/wplogo2.png -text
 /write.png -text
 /xhtml1-transitional.dtd -text
 /xhtmlValidatorTemplate.xhtml -text
