Updated the UI as per Ticket#35.

--- a/.gitattributes
+++ b/.gitattributes
@@ -47,6 +47,8 @@ Classes/WPCommentsDetailViewController.h -text
 Classes/WPCommentsDetailViewController.m -text
 Classes/WPImagePickerController.h -text
 Classes/WPImagePickerController.m -text
+Classes/WPLogoView.h -text
+Classes/WPLogoView.m -text
 Classes/WPNavigationLeftButtonView.h -text
 Classes/WPNavigationLeftButtonView.m -text
 Classes/WPPhotoViewController.h -text
