Fixed the issue mentioned in Ticket#59.
Also fixed minor issues found during testing.

--- a/.gitattributes
+++ b/.gitattributes
@@ -66,6 +66,8 @@ Classes/WPSegmentedSelectionTableViewController.h -text
 Classes/WPSegmentedSelectionTableViewController.m -text
 Classes/WPSelectionTableViewController.h -text
 Classes/WPSelectionTableViewController.m -text
+Classes/WPXMLReader.h -text
+Classes/WPXMLReader.m -text
 Classes/WPXMLValidator.h -text
 Classes/WPXMLValidator.m -text
 Classes/WordPressAppDelegate.h -text
