--- a/.gitattributes
+++ b/.gitattributes
@@ -47,6 +47,8 @@ Classes/WPCommentsDetailViewController.h -text
 Classes/WPCommentsDetailViewController.m -text
 Classes/WPImagePickerController.h -text
 Classes/WPImagePickerController.m -text
+Classes/WPLabelFooterView.h -text
+Classes/WPLabelFooterView.m -text
 Classes/WPLogoView.h -text
 Classes/WPLogoView.m -text
 Classes/WPNavigationLeftButtonView.h -text
