Add a selected state for the faux-back buttons

--- a/.gitattributes
+++ b/.gitattributes
@@ -133,6 +133,7 @@ WordPress.xcodeproj/project.pbxproj -text
 /aboutscreenlogo.png -text
 /application-icon.png -text
 /backNav.png -text
+/backNavd.png -text
 /category_child.png -text
 /check.png -text
 /commentDelete.png -text
