Beginning to merge Custom Fields code into Trunk.  Adding custom fields classes.

--- a/.gitattributes
+++ b/.gitattributes
@@ -135,6 +135,78 @@ WordPress.xcodeproj/project.pbxproj -text
 /application-icon.png -text
 /backNav.png -text
 /backNavd.png -text
+build/Debug-iphonesimulator/WordPress.app.dSYM/Contents/Resources/DWARF/WordPress -text
+build/Debug-iphonesimulator/WordPress.app/AboutWordpress.nib -text
+build/Debug-iphonesimulator/WordPress.app/CommentsListController.nib -text
+build/Debug-iphonesimulator/WordPress.app/Default.png -text
+build/Debug-iphonesimulator/WordPress.app/Disclosure[!!-~]Indicator.png -text
+build/Debug-iphonesimulator/WordPress.app/DraftsFolder.png -text
+build/Debug-iphonesimulator/WordPress.app/DraftsList.nib -text
+build/Debug-iphonesimulator/WordPress.app/Info.plist -text
+build/Debug-iphonesimulator/WordPress.app/MainBackground.png -text
+build/Debug-iphonesimulator/WordPress.app/MainWindow.nib -text
+build/Debug-iphonesimulator/WordPress.app/PageDetailViewController.nib -text
+build/Debug-iphonesimulator/WordPress.app/PageDetailsController.nib -text
+build/Debug-iphonesimulator/WordPress.app/PagesDraftListController.nib -text
+build/Debug-iphonesimulator/WordPress.app/PagesListController.nib -text
+build/Debug-iphonesimulator/WordPress.app/PostDetailEditController.nib -text
+build/Debug-iphonesimulator/WordPress.app/PostDetailViewController.nib -text
+build/Debug-iphonesimulator/WordPress.app/PostsListController.nib -text
+build/Debug-iphonesimulator/WordPress.app/Red[!!-~]Background.png -text
+build/Debug-iphonesimulator/WordPress.app/Red[!!-~]Selected[!!-~]Background.png -text
+build/Debug-iphonesimulator/WordPress.app/RootViewController.nib -text
+build/Debug-iphonesimulator/WordPress.app/RoundedRectBlack.png -text
+build/Debug-iphonesimulator/WordPress.app/WPActivityIndicator.nib -text
+build/Debug-iphonesimulator/WordPress.app/WPAddCategoryViewController.nib -text
+build/Debug-iphonesimulator/WordPress.app/WPBlogDetailViewController.nib -text
+build/Debug-iphonesimulator/WordPress.app/WPBlogMainViewController.nib -text
+build/Debug-iphonesimulator/WordPress.app/WPBlogsListController.nib -text
+build/Debug-iphonesimulator/WordPress.app/WPCommentsDetailViewController.nib -text
+build/Debug-iphonesimulator/WordPress.app/WPPhotoViewController.nib -text
+build/Debug-iphonesimulator/WordPress.app/WPPhotosListViewController.nib -text
+build/Debug-iphonesimulator/WordPress.app/WPPostDetailPreviewController.nib -text
+build/Debug-iphonesimulator/WordPress.app/WPPostSettingsController.nib -text
+build/Debug-iphonesimulator/WordPress.app/WPPublishOnEditController.nib -text
+build/Debug-iphonesimulator/WordPress.app/WPSelectionTableViewController.nib -text
+build/Debug-iphonesimulator/WordPress.app/WP_application-icon.png -text
+build/Debug-iphonesimulator/WordPress.app/WordPress -text
+build/Debug-iphonesimulator/WordPress.app/WordPress.png -text
+build/Debug-iphonesimulator/WordPress.app/aboutscreenfooter.png -text
+build/Debug-iphonesimulator/WordPress.app/aboutscreenlogo.png -text
+build/Debug-iphonesimulator/WordPress.app/application-icon.png -text
+build/Debug-iphonesimulator/WordPress.app/backNav.png -text
+build/Debug-iphonesimulator/WordPress.app/backNavd.png -text
+build/Debug-iphonesimulator/WordPress.app/category_child.png -text
+build/Debug-iphonesimulator/WordPress.app/check.png -text
+build/Debug-iphonesimulator/WordPress.app/commentDelete.png -text
+build/Debug-iphonesimulator/WordPress.app/delete.png -text
+build/Debug-iphonesimulator/WordPress.app/down.png -text
+build/Debug-iphonesimulator/WordPress.app/lock.png -text
+build/Debug-iphonesimulator/WordPress.app/photos.png -text
+build/Debug-iphonesimulator/WordPress.app/preview.png -text
+build/Debug-iphonesimulator/WordPress.app/settings.png -text
+build/Debug-iphonesimulator/WordPress.app/uncheck.png -text
+build/Debug-iphonesimulator/WordPress.app/up.png -text
+build/Debug-iphonesimulator/WordPress.app/vertBars.png -text
+build/Debug-iphonesimulator/WordPress.app/wplogo.png -text
+build/Debug-iphonesimulator/WordPress.app/write.png -text
+build/WordPress.build/Debug-iphonesimulator/WordPress.build/WordPress-all-target-headers.hmap -text
+build/WordPress.build/Debug-iphonesimulator/WordPress.build/WordPress-generated-files.hmap -text
+build/WordPress.build/Debug-iphonesimulator/WordPress.build/WordPress-own-target-headers.hmap -text
+build/WordPress.build/Debug-iphonesimulator/WordPress.build/WordPress-project-headers.hmap -text
+build/WordPress.build/Debug-iphonesimulator/WordPress.build/WordPress.hmap -text
+build/WordPress.build/WordPress.pbxindex/categories.pbxbtree -text
+build/WordPress.build/WordPress.pbxindex/cdecls.pbxbtree -text
+build/WordPress.build/WordPress.pbxindex/decls.pbxbtree -text
+build/WordPress.build/WordPress.pbxindex/files.pbxbtree -text
+build/WordPress.build/WordPress.pbxindex/imports.pbxbtree -text
+build/WordPress.build/WordPress.pbxindex/pbxindex.header -text
+build/WordPress.build/WordPress.pbxindex/protocols.pbxbtree -text
+build/WordPress.build/WordPress.pbxindex/refs.pbxbtree -text
+build/WordPress.build/WordPress.pbxindex/strings.pbxstrings/control -text
+build/WordPress.build/WordPress.pbxindex/strings.pbxstrings/strings -text
+build/WordPress.build/WordPress.pbxindex/subclasses.pbxbtree -text
+build/WordPress.build/WordPress.pbxindex/symbols0.pbxsymbols -text
 /category_child.png -text
 /check.png -text
 /commentDelete.png -text
