Ignoring my user files.

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,2 @@
-WordPress.xcodeproj/jb.pbxuser
-WordPress.xcodeproj/jb.perspectivev3
+WordPress.xcodeproj/garethtownsend.*
+WordPress.xcodeproj/quamen.*
