--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,3 @@
-WordPress.xcodeproj/garethtownsend.*
-WordPress.xcodeproj/quamen.*
+WordPress.xcodeproj/*.mode1v3
+WordPress.xcodeproj/*.pbxuser
 /build
