Refactored refresh button into custom view class. Added activity indicator to refresh button.

--- a/.gitattributes
+++ b/.gitattributes
@@ -49,6 +49,8 @@ Classes/PostsListController.h -text
 Classes/PostsListController.m -text
 Classes/Reachability.h -text
 Classes/Reachability.m -text
+Classes/RefreshButtonView.h -text
+Classes/RefreshButtonView.m -text
 Classes/UIImage+INResizeImageAllocator.h -text
 Classes/UIImage+INResizeImageAllocator.m -text
 Classes/UIViewController+WPAnimation.h -text
