Gravatars in comments. Still need to cache these so they don't download the same thing over and over.

--- a/.gitattributes
+++ b/.gitattributes
@@ -55,6 +55,8 @@ Classes/WPActivityIndicatorTVCell.h -text
 Classes/WPActivityIndicatorTVCell.m -text
 Classes/WPAddCategoryViewController.h -text
 Classes/WPAddCategoryViewController.m -text
+Classes/WPAsynchronousImageView.h -text
+Classes/WPAsynchronousImageView.m -text
 Classes/WPCategoriesController.h -text
 Classes/WPCategoriesController.m -text
 Classes/WPCommentsDetailViewController.h -text
