--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
 WordPress.xcodeproj/*.mode1v3
+WordPress.xcodeproj/*.mode2v3
 WordPress.xcodeproj/*.pbxuser
+WordPress.xcodeproj/*.perspectivev3
 /build
