--- a/.gitattributes
+++ b/.gitattributes
@@ -24,6 +24,8 @@ Classes/EditBlogViewController.h -text
 Classes/EditBlogViewController.m -text
 Classes/EditPageViewController.h -text
 Classes/EditPageViewController.m -text
+Classes/ImageCache.h -text
+Classes/ImageCache.m -text
 Classes/NSString+Util.h -text
 Classes/NSString+Util.m -text
 Classes/NSString+XMLExtensions.h -text
