Fixed bug in GravatarImageView where image pointer was released unnecessarily. Added default gravatar image.

--- a/.gitattributes
+++ b/.gitattributes
@@ -150,6 +150,7 @@ WordPress.xcodeproj/project.pbxproj -text
 /documents.png -text
 /down.png -text
 /favicon.ico -text svneol=unset#unset
+/gravatar.jpg -text
 /license.txt -text
 /lock.png -text
 /main.m -text
