Code cleanup and refactorings.

--- a/.gitattributes
+++ b/.gitattributes
@@ -38,6 +38,10 @@ Classes/PageViewController.h -text
 Classes/PageViewController.m -text
 Classes/PagesViewController.h -text
 Classes/PagesViewController.m -text
+Classes/PostPreviewViewController.h -text
+Classes/PostPreviewViewController.m -text
+Classes/PostSettingsViewController.h -text
+Classes/PostSettingsViewController.m -text
 Classes/PostTableViewCell.h -text
 Classes/PostTableViewCell.m -text
 Classes/PostViewController.h -text
@@ -75,10 +79,6 @@ Classes/WPPhotoViewController.m -text
 Classes/WPPhotosListProtocol.h -text
 Classes/WPPhotosListViewController.h -text
 Classes/WPPhotosListViewController.m -text
-Classes/WPPostDetailPreviewController.h -text
-Classes/WPPostDetailPreviewController.m -text
-Classes/WPPostSettingsController.h -text
-Classes/WPPostSettingsController.m -text
 Classes/WPProgressHUD.h -text
 Classes/WPProgressHUD.m -text
 Classes/WPPublishOnEditController.h -text
@@ -110,15 +110,16 @@ Classes/XMLRPC/XMLValueDecoder.m -text
 /Default.png -text
 /Disclosure[!!-~]Indicator.png -text
 /DraftsFolder.png -text
-/DraftsList.xib -text
 /EditBlogViewController.xib -text
 /EditPageViewController.xib -text
+/EditPostViewController.xib -text
 /Info.plist -text
 /MainBackground.png -text
 /MainWindow.xib -text
 /PageViewController.xib -text
 /PagesDraftsViewController.xib -text
-/PostDetailEditController.xib -text
+/PostPreviewViewController.xib -text
+/PostSettingsViewController.xib -text
 /PostViewController.xib -text
 /Red[!!-~]Background.png -text
 /Red[!!-~]Selected[!!-~]Background.png -text
@@ -127,8 +128,6 @@ Classes/XMLRPC/XMLValueDecoder.m -text
 /WPCategoriesController.xib -text
 /WPPhotoViewController.xib -text
 /WPPhotosListViewController.xib -text
-/WPPostDetailPreviewController.xib -text
-/WPPostSettingsController.xib -text
 /WPPublishOnEditController.xib -text
 /WPSelectionTableViewController.xib -text
 /WP_application-icon.png -text
