Refactored dashboard sections. Removed unused dashboard NIB.

--- a/.gitattributes
+++ b/.gitattributes
@@ -58,6 +58,8 @@ Classes/RegExProcessor.h -text
 Classes/RegExProcessor.m -text
 Classes/RegexKitLite.h -text
 Classes/RegexKitLite.m -text
+Classes/ResourcesTableViewSection.h -text
+Classes/ResourcesTableViewSection.m -text
 Classes/UIImage+INResizeImageAllocator.h -text
 Classes/UIImage+INResizeImageAllocator.m -text
 Classes/UIViewController+WPAnimation.h -text
@@ -113,7 +115,6 @@ Classes/XMLRPC/XMLValueDecoder.h -text
 Classes/XMLRPC/XMLValueDecoder.m -text
 /CommentViewController.xib -text
 /CommentsViewController.xib -text
-/DashboardViewController.xib -text
 /Default.png -text
 /Disclosure[!!-~]Indicator.png -text
 /DraftsFolder.png -text
