--- a/.gitattributes
+++ b/.gitattributes
@@ -162,7 +162,9 @@ WordPress.xcodeproj/project.pbxproj -text
 /license.txt -text
 /lock.png -text
 /main.m -text
+/pages.png -text
 /photos.png -text
+/posts.png -text
 /preview.png -text
 /settings.png -text
 /speedometer.png -text
