--- a/.gitattributes
+++ b/.gitattributes
@@ -123,6 +123,7 @@ Classes/XMLRPC/XMLValueDecoder.m -text
 /Entitlements.plist -text
 /Icons[!!-~]License -text
 /Info.plist -text
+/MainBackground.png -text
 /MainWindow.xib -text
 /PageViewController.xib -text
 /PagesDraftsViewController.xib -text
