--- a/.gitattributes
+++ b/.gitattributes
@@ -120,6 +120,7 @@ Classes/XMLRPC/XMLValueDecoder.m -text
 /EditBlogViewController.xib -text
 /EditPageViewController.xib -text
 /EditPostViewController.xib -text
+/Entitlements.plist -text
 /Icons[!!-~]License -text
 /Info.plist -text
 /MainBackground.png -text
