--- a/.gitattributes
+++ b/.gitattributes
@@ -1,6 +1,7 @@
 * text=auto !eol
 /AboutWordpress.xib -text
 /AddBlogValidationBackground.png -text svneol=unset#unset
+/AddBlogValidationBackground@2x.png -text
 /BlogViewController-iPad.xib -text
 /BlogViewController.xib -text
 Classes/AboutViewController.h -text
@@ -175,6 +176,7 @@ Classes/glossyButton-normal.png -text svneol=unset#unset
 /Default-Landscape.png -text svneol=unset#unset
 /Default-Portrait.png -text svneol=unset#unset
 /Default.png -text
+/Default@2x.png -text
 /Disclosure[!!-~]Indicator.png -text
 /EditBlogViewController.xib -text
 /EditPageViewController-iPad.xib -text
@@ -208,6 +210,7 @@ Resources-iPad/MainWindow-iPad.xib -text
 /WPPublishOnEditController.xib -text
 /WPSelectionTableViewController.xib -text
 /WPpregressHUDBackground.png -text
+/WPpregressHUDBackground@2x.png -text
 /WebSignupViewController.xib -text
 /WelcomeViewController.xib -text
 WordPress.xcodeproj/project.pbxproj -text
@@ -222,6 +225,7 @@ WordPress.xcodeproj/project.pbxproj -text
 /delete.png -text
 /down.png -text
 /favicon.ico -text svneol=unset#unset
+/favicon@2x.ico -text
 /getLocation.png -text
 /getLocation@2x.png -text
 /gettingLocation.png -text
@@ -237,9 +241,11 @@ WordPress.xcodeproj/project.pbxproj -text
 /lock.png -text
 /main.m -text
 /pages.png -text
+/pages@2x.png -text
 /photos.png -text
 /photos@2x.png -text
 /posts.png -text
+/posts@2x.png -text
 /preview.png -text
 /preview@2x.png -text
 /settings.png -text
@@ -247,12 +253,16 @@ WordPress.xcodeproj/project.pbxproj -text
 /sync.png -text svneol=unset#unset
 /sync@2x.png -text
 /talk_bubbles.png -text svneol=unset#unset
+/talk_bubbles@2x.png -text
 /uncheck.png -text
 /uncrustify.cfg -text
 /up.png -text
 /welcome_bg.png -text
+/welcome_bg@2x.png -text
 /welcome_btn_normal.png -text
+/welcome_btn_normal@2x.png -text
 /welcome_btn_over.png -text
+/welcome_btn_over@2x.png -text
 /write.png -text
 /write@2x.png -text
 /xhtml1-transitional.dtd -text
