Checking in comments high res icon

--- a/.gitattributes
+++ b/.gitattributes
@@ -220,6 +220,7 @@ WordPress.xcodeproj/project.pbxproj -text
 /category_child.png -text
 /check.png -text
 /commentDelete.png -text
+/comments@2x.png -text
 /defaultPostTemplate.html -text
 /defaultPostTemplate_old.html -text
 /delete.png -text
