--- a/.gitattributes
+++ b/.gitattributes
@@ -232,6 +232,7 @@ WordPress.xcodeproj/project.pbxproj -text
 /down.png -text
 /down@2x.png -text
 /favicon.ico -text svneol=unset#unset
+/favicon.png -text
 /favicon@2x.ico -text
 /favicon@2x.png -text
 /getLocation.png -text
